--- a/random_numbers.ipynb
+++ b/random_numbers.ipynb
@@ -185,7 +185,7 @@
     "        x += 1\n",
     "    return latitudes\n",
     "# Call the function with 1500.\n",
-    "%timeit latitudes(1500)"
+    "%timeit latitudes(1500)\n"
    ]
   },
   {
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "352b8bc0",
+   "id": "3b1e85ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "cb571927",
+   "id": "7640889a",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5878da6d",
+   "id": "4b1edeb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ad3ebedd",
+   "id": "5c8c9b4a",
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "324c85a2",
+   "id": "db4341e0",
    "metadata": {},
    "outputs": [],
    "source": []
