--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -930,7 +930,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "1b12c866",
+   "id": "54dc7f8b",
    "metadata": {},
    "outputs": [
     {
@@ -1130,7 +1130,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "cd4b7c88",
+   "id": "5d20d2b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1141,7 +1141,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "efc1540c",
+   "id": "de551f50",
    "metadata": {},
    "outputs": [
     {
@@ -1356,7 +1356,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "e2d91c14",
+   "id": "d90de198",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1369,7 +1369,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "71976ef3",
+   "id": "46f73511",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1384,7 +1384,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "afd82d9a",
+   "id": "6c8179cb",
    "metadata": {},
    "outputs": [
     {
@@ -1426,7 +1426,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "c9478304",
+   "id": "7f5bca3e",
    "metadata": {},
    "outputs": [
     {
@@ -1463,7 +1463,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "89bb3e15",
+   "id": "83d81ab8",
    "metadata": {},
    "outputs": [
     {
@@ -1500,7 +1500,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "6f48d9c8",
+   "id": "18ad4217",
    "metadata": {},
    "outputs": [
     {
@@ -1537,7 +1537,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "0cc46bf2",
+   "id": "75a8a5cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1569,7 +1569,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "4c5d4942",
+   "id": "80a867ab",
    "metadata": {},
    "outputs": [
     {
@@ -1600,7 +1600,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "5553ff37",
+   "id": "452d5f60",
    "metadata": {},
    "outputs": [
     {
@@ -1632,7 +1632,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "eb02121f",
+   "id": "2b25d55c",
    "metadata": {},
    "outputs": [
     {
@@ -1848,7 +1848,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "fb183ef7",
+   "id": "ada5e60b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1860,7 +1860,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "d988e0c2",
+   "id": "3ad22750",
    "metadata": {},
    "outputs": [
     {
@@ -1889,7 +1889,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "429702d1",
+   "id": "bb31e3d8",
    "metadata": {},
    "outputs": [
     {
@@ -1918,7 +1918,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "5b468eaa",
+   "id": "016d8371",
    "metadata": {},
    "outputs": [
     {
@@ -1947,7 +1947,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "961a7acc",
+   "id": "7bcbda79",
    "metadata": {},
    "outputs": [
     {
@@ -1976,7 +1976,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "77fbeaaa",
+   "id": "25eed35b",
    "metadata": {},
    "outputs": [
     {
@@ -2005,7 +2005,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "4e7ba515",
+   "id": "a8dd2435",
    "metadata": {},
    "outputs": [
     {
@@ -2034,7 +2034,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "ca30df56",
+   "id": "0e98cfd0",
    "metadata": {},
    "outputs": [
     {
@@ -2063,7 +2063,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "189821af",
+   "id": "769bf923",
    "metadata": {},
    "outputs": [
     {
@@ -2091,8 +2091,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "a3ac9fa5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://api.spacexdata.com/v2/launchpads\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "url = \"https://api.spacexdata.com/v2/launchpads\"\n",
+    "print(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "72f5b981",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c04fa75d",
+   "id": "2d9d4506",
    "metadata": {},
    "outputs": [],
    "source": []
